--- a/static/heatmap/heatmap.html
+++ b/static/heatmap/heatmap.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <script src="http://d3js.org/d3.v3.js" charset="utf-8"></script>
+<script src="http://d3js.org/colorbrewer.v1.min.js"></script>
 
 <title>Heatmap Visualization</title>
 <style type="text/css">
