--- a/static/heatmap/heatmap.html
+++ b/static/heatmap/heatmap.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <script src="http://d3js.org/d3.v3.js" charset="utf-8"></script>
-<script src="http://d3js.org/colorbrewer.v1.min.js"></script>
+<script src="https://d3js.org/colorbrewer.v1.min.js"></script>
 
 <title>Heatmap Visualization</title>
 <style type="text/css">
@@ -63,13 +63,13 @@
   <h1>Initial Heat Map</h1>
   <div id="heatmap", class = "svg"></div>
   <script type="text/javascript" src="heatmap.js"></script>
-  <div class = "legend">
-    <div class = "legend-title">Key</div>
-      <ul class = "bars">
-          <li><span style="background:#b2746b"></span>First series</li>
-          <li><span style="background:#7a91c1"></span>Second series</li>
-          <li><span style="background:#86b265"></span>Third series</li>
-      </ul>
-  </div>
+  <!--<div class = "legend">-->
+    <!--<div class = "legend-title">Key</div>-->
+      <!--<ul class = "bars">-->
+          <!--<li><span style="background:#b2746b"></span>First series</li>-->
+          <!--<li><span style="background:#7a91c1"></span>Second series</li>-->
+          <!--<li><span style="background:#86b265"></span>Third series</li>-->
+      <!--</ul>-->
+  <!--</div>-->
 </body>
 </html>
