--- a/static/heatmap/heatmap.html
+++ b/static/heatmap/heatmap.html
@@ -20,12 +20,14 @@
     .tooltip {
         position: absolute;
         text-align: center;
-        width: 80px;
-        height: 35px;
+        width: 100px;
+        height: 50px;
         padding: 2px;
         border-radius: 8px;
         background: #DCDCDC;
         pointer-events: none;
+        font-family: sans-serif;
+        font-size: 8.5px;
 	}
     
     li {
