Trying to connect the heatmap to the dashboard.

--- a/static/heatmap/heatmap.html
+++ b/static/heatmap/heatmap.html
@@ -64,7 +64,7 @@
 <body>
   <h1>Initial Heat Map</h1>
   <div id="heatmap", class = "svg"></div>
-  <script type="text/javascript" src="heatmap.js"></script>
+  <script type="text/javascript" src="../js/heatmap.js"></script>
   <!--<div class = "legend">-->
     <!--<div class = "legend-title">Key</div>-->
       <!--<ul class = "bars">-->
